--- a/css/styles.css
+++ b/css/styles.css
@@ -24,16 +24,14 @@ ol {
 
 a {
     text-decoration: none;
-    color: inherit
+    color: inherit;
 }
 
-a:hover {
-    color: #404bbf;
-}
-
+a:hover,
 a:focus {
     color: #404bbf;
 }
+
 
 img {
     display: block;
@@ -76,6 +74,7 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-right: 76px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio-logo {
@@ -86,6 +85,7 @@ img {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-nav {
@@ -109,7 +109,25 @@ img {
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
+}
+
+.underlining {
+    position: relative;
+    color: #404bbf;
+}
+
+.underlining::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+
 }
 
 .adress {
@@ -127,6 +145,7 @@ img {
     color: #434455;
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-information {
@@ -141,11 +160,17 @@ img {
 .hero {
     max-width: 1440px;
     background-color: #2e2f42;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/bg-hero/people-office\ 1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding: 188px 0 188px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    
 }
 
 .hero-text {
@@ -179,15 +204,15 @@ img {
     min-width: 169px;
     margin-left: auto;
     margin-right: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
     
-button:hover {
+button:hover,
+button:focus { 
     background-color: #404BBF;
 }
 
-button:focus {
-    background-color: #404BBF;
-}
 
 /* ==========STYLE-SECTION-FEATURES========= */
 
@@ -212,6 +237,26 @@ button:focus {
 
 .main-feature {
     width: calc((100% - 72px) / 4 );
+}
+
+.features-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f4f4fd;
+    max-width: 264px;
+    height: 112px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    position: relative;
+    margin-bottom: 8px;
+}
+
+.features-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .features-header {
@@ -291,6 +336,33 @@ button:focus {
     padding: 32px 0;
 }
 
+.team-social {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8px;
+}
+
+.social-list-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-link:hover, 
+.social-list-link:focus {
+    background-color: #404bbf;
+}
+
+.social-icon {
+    fill: #f4f4fd;
+}
+
 
 /* ==========STYLE-OUR-PORTFOLIO======== */
 
@@ -348,6 +420,44 @@ button:focus {
     color: #434455;
 }
 
+.portfolio-overlay {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background: #4d5ae5;
+    width: 100%;
+    height: 100%;
+    transform: translatey(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-overlay-box {
+    position: relative;
+    width: 360px;
+    height: 300px;
+    margin: 0 auto;
+    overflow: hidden;
+    }
+
+.some-portfolio {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.some-portfolio:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
+}
+
+.some-portfolio:hover .portfolio-overlay {
+    transform: translatey(0);
+}
+
+
 
 
 /* ==========STYLE-FOOTER========= */
@@ -360,6 +470,15 @@ button:focus {
     
 }
 
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-logo-container {
+    margin-right: 120px;
+}
+
 .footer-web-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -370,7 +489,7 @@ button:focus {
     color: #4d5ae5;
     display: inline-block;
     margin-bottom: 16px;
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-studio-logo {
@@ -381,6 +500,7 @@ button:focus {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #f4f4fd;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tagline {
@@ -393,3 +513,48 @@ button:focus {
     max-width: 264px;
     
 }
+
+.footer-social-media-part-text {
+    display: inline;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.footer-social-list {
+    display: flex;
+    gap: 16px;
+    margin-top: 16px;
+}
+
+.footer-social-list-item {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-list-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icon {
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+    fill: #f4f4fd;
+}
+
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
+    background-color: #31d0aa;
+}
+
