--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,8 @@ img {
 
 .main-header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .web-logo {
@@ -162,7 +164,7 @@ img {
     background-color: #2e2f42;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
+        rgba(46, 47, 66, 0.7)), 
         url(../images/bg-hero/people-office\ 1.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -327,9 +329,9 @@ button:focus {
     background: #fff;
     width: calc((100% - 72px) / 4); 
     border-radius: 0 0 4px 4px;
-    box-shadow:  1px 1px 5px rgba(78, 78, 78, 20%);
-
-}
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    }
 
 .team-list-text-box {
     text-align: center;
@@ -458,8 +460,6 @@ button:focus {
 }
 
 
-
-
 /* ==========STYLE-FOOTER========= */
 .footer {
     display: block;
@@ -521,6 +521,7 @@ button:focus {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #ffffff;
+    margin-bottom: 16px;
 }
 
 .footer-social-list {
@@ -546,10 +547,6 @@ button:focus {
 }
 
 .footer-social-icon {
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
     fill: #f4f4fd;
 }
 
