--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ img {
 .hero {
     max-width: 1440px;
     background-color: #2e2f42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg-img/bg_img.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -396,7 +396,6 @@ button:focus {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-top: 120px;
     margin-bottom: 72px;
 }
 
